@@ -19,6 +19,8 @@
 #include <stdio.h>
 #include <stdarg.h>
 
+struct pool;
+
 /*
  * On error, up to glibc 2.0.6, snprintf returned -1 if buffer was too small;
  * From glibc 2.1 it returns number of chars (excl. trailing null) that would 
@@ -31,5 +33,11 @@ int lvm_snprintf(char *buf, size_t bufsize, const char *format, ...);
 int emit_to_buffer(char **buffer, size_t *size, const char *fmt, ...);
 
 int split_words(char *buffer, unsigned max, char **argv);
+
+char *build_dm_name(struct pool *mem, const char *vg,
+                    const char *lv, const char *layer);
+
+int split_dm_name(struct pool *mem, const char *dmname,
+                  char **vgname, char **lvname, char **layer);
 
 #endif
